# pyoxidizer-test

./: pyoxidizer.bzl  pyproject.toml  requirements.txt  script.py
.github/workflows/: build.yml  remove-artifacts.yml
src/: script.py
