[tool.poetry]
name = "pyoxidizer-test"
version = "0.1.0"
description = ""
authors = ["Tamas Nepusz <ntamas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
